fixed leave room test 22% of lines covered